# ai-massive-mimo-hybrid-beamforming

./: .gitignore  AGENTS.md  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: deepmimo_cnn.yaml  deepmimo_cnn_finetune.yaml  deepmimo_cnn_pretrain.yaml  deepmimo_residual_rzf.yaml  deepmimo_residual_wmmse.yaml  deepmimo_unfolded_rzf.yaml  deepmimo_unfolded_wmmse_lite.yaml  sionna_e2e.yaml  sionna_ofdm_learned_beamformer.yaml  sionna_ofdm_residual_rzf.yaml  sionna_ofdm_residual_wmmse_distill.yaml  sionna_ofdm_unfolded_lite.yaml  synthetic_cnn.yaml  synthetic_cnn_finetune_highsnr.yaml  synthetic_cnn_finetune_mixed_teacher.yaml  synthetic_cnn_finetune_no_snr.yaml  synthetic_cnn_pretrain.yaml  synthetic_cnn_pretrain_mixed_teacher.yaml  synthetic_cnn_pretrain_no_snr.yaml  synthetic_mlp.yaml  synthetic_residual_rzf.yaml  synthetic_residual_wmmse.yaml  synthetic_unfolded_rzf.yaml  synthetic_unfolded_wmmse_lite.yaml  synthetic_unfolded_wmmse_lite_iter1.yaml  synthetic_unfolded_wmmse_lite_iter2.yaml  synthetic_unfolded_wmmse_lite_iter5.yaml  unfolded_pga.yaml
docs/: release_checklist.md  sionna_e2e_demo.md  sionna_learned_beamformer_training.md  sionna_native_channel_extraction.md  sionna_native_ofdm_link_chain.md  sionna_native_precoder_api_probe.md
notebooks/: 02_sionna_e2e_demo.ipynb
outputs/: artifact_manifest.json  artifact_manifest.md  sionna_training_artifact_manifest.json  sionna_training_artifact_manifest.md
reports/: experiment_report.md
scripts/: _bootstrap.py  analyze_deepmimo_dataset.py  analyze_sionna_residual_corrections.py  check_env.py  (+113 more)
(+258 files in other folders)
