[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-massive-mimo-hybrid-beamforming"
version = "0.1.0"
description = "Reproducible PyTorch-based AI massive MIMO hybrid beamforming pipeline with synthetic CSI, DeepMIMO, and Sionna hooks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Codex Engineering Agent"}
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "tensorboard>=2.16",
  "torch>=2.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.6",
]
deepmimo = [
  "DeepMIMO",
]
sionna = [
  "sionna-no-rt",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
